--- a/BLS.Infrastructure/packages.config
+++ b/BLS.Infrastructure/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="LinqKit" version="1.0" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
   <package id="Unity.Interception" version="3.5.1404.0" targetFramework="net45" />
