--- a/BLS.Infrastructure/BLS.Infrastructure.csproj.nuspec
+++ b/BLS.Infrastructure/BLS.Infrastructure.csproj.nuspec
@@ -14,7 +14,7 @@
     <copyright>Copyright 2015</copyright>
     <tags>Infrastructure Common outils utilitaires</tags>
     <dependencies>
-      <dependency id="LinqKit" />
+      <dependency id="LinqKit" version="1.1.2.0"/>
     </dependencies>
   </metadata>
   <files>
