--- a/BLS.Infrastructure.Ef6/BLS.Infrastructure.Dal.csproj
+++ b/BLS.Infrastructure.Ef6/BLS.Infrastructure.Dal.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BF7AE202-8567-489D-8373-0EA565A2DBB9}</ProjectGuid>
+    <ProjectGuid>{9710965E-1582-4540-8DFA-04B2B1F73AE1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BLS.Infrastructure</RootNamespace>
-    <AssemblyName>BLS.Infrastructure</AssemblyName>
+    <RootNamespace>BLS.Infrastructure.Dal</RootNamespace>
+    <AssemblyName>BLS.Infrastructure.Dal</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,32 +42,16 @@
     <OutputPath>bin\ReleaseInfraStructure\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.13.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.Interception, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.Interception.3.5.1404.0\lib\Net45\Microsoft.Practices.Unity.Interception.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.Interception.Configuration, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.Interception.3.5.1404.0\lib\Net45\Microsoft.Practices.Unity.Interception.Configuration.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -80,21 +64,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extentions\Enum\EnumExtention.cs" />
-    <Compile Include="Extentions\ObjectExtentions.cs" />
     <Compile Include="Properties\AssemblyFileVersion.cs">
+      <DependentUpon>AssemblyFileVersion.tt</DependentUpon>
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>AssemblyFileVersion.tt</DependentUpon>
     </Compile>
-    <Compile Include="Exceptions\BaseException.cs" />
-    <Compile Include="Exceptions\BusinessLogicCustomException.cs" />
-    <Compile Include="Exceptions\BusinessLogicException.cs" />
-    <Compile Include="Exceptions\DataAccessCustomException.cs" />
-    <Compile Include="Exceptions\DataAccessException.cs" />
-    <Compile Include="Exceptions\PassThroughException.cs" />
-    <Compile Include="Exceptions\UIException.cs" />
-    <Compile Include="Interceptors\LoggerInterceptor.cs" />
+    <Compile Include="EF6\DataContext.cs" />
+    <Compile Include="EF6\Fake\FakeDbContext.cs" />
+    <Compile Include="EF6\Fake\FakeDbSet.cs" />
+    <Compile Include="Pattern\DataContext\IDataContext.cs" />
+    <Compile Include="Pattern\DataContext\IDataContextAsync.cs" />
+    <Compile Include="Pattern\Repositories\IRepository.cs" />
+    <Compile Include="Pattern\Repositories\IRepositoryAsync.cs" />
+    <Compile Include="Pattern\UnitOfWork\IUnitOfWork.cs" />
+    <Compile Include="Pattern\UnitOfWork\IUnitOfWorkAsync.cs" />
+    <Compile Include="Repository.cs" />
+    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -102,8 +87,9 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>AssemblyFileVersion.cs</LastGenOutput>
     </None>
-    <None Include="BLS.Infrastructure.csproj.nuspec">
+    <None Include="BLS.Infrastructure.Dal.csproj.nuspec">
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
@@ -127,17 +113,18 @@
     <PostBuildEvent>echo HELLO, THE ASSEMBLY VERSION IS: @(VersionNumber)</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>if $(ConfigurationName) == ReleaseInfraStructure (
-del $(TargetDir)*.nupkg
-"C:\Nuget\nuget.exe" pack "$(ProjectPath)" -Properties Configuration=ReleaseInfraStructure -Verbosity detailed
-"C:\Nuget\nuget.exe" push "$(TargetDir)BLS.Infrastructure.@(VersionNumber).nupkg" 440bc87f-c8b3-4410-b57b-192c649bcadd -src https://www.nuget.org
-)</PostBuildEvent>
-  </PropertyGroup>
-  <PropertyGroup>
-    <PreBuildEvent>"$(DevEnvDir)tf.exe" checkout "$(ProjectDir)AssemblyFileVersion.cs"
+    <PreBuildEvent>del $(TargetDir)*.nupkg
+"$(DevEnvDir)tf.exe" checkout "$(ProjectDir)AssemblyFileVersion.cs"
 set textTemplatingPath="%25CommonProgramFiles(x86)%25\Microsoft Shared\TextTemplating\$(VisualStudioVersion)\texttransform.exe"
 if %25textTemplatingPath%25=="\Microsoft Shared\TextTemplating\$(VisualStudioVersion)\texttransform.exe" set textTemplatingPath="%25CommonProgramFiles%25\Microsoft Shared\TextTemplating\$(VisualStudioVersion)\texttransform.exe"
-%25textTemplatingPath%25 "$(ProjectDir)Properties\AssemblyFileVersion.tt"</PreBuildEvent>
+%25textTemplatingPath%25 "$(ProjectDir)Properties\AssemblyFileVersion.tt"
+</PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>if $(ConfigurationName) == ReleaseDAL (
+"C:\Nuget\nuget.exe" pack "$(ProjectPath)" -Properties Configuration=ReleaseDAL -Verbosity detailed
+"C:\Nuget\nuget.exe" push "$(TargetDir)BLS.Infrastructure.Dal.@(VersionNumber).nupkg" 440bc87f-c8b3-4410-b57b-192c649bcadd -src https://www.nuget.org
+)</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
@@ -146,12 +133,4 @@ if %25textTemplatingPath%25=="\Microsoft Shared\TextTemplating\$(VisualStudioVer
   <Target Name="AfterBuild">
   </Target>
   -->
-  <!--<Target Name="AfterBuild">
-    <GetAssemblyIdentity AssemblyFiles="$(TargetPath)">
-      <Output TaskParameter="Assemblies" ItemName="CurrentAssembly" />
-    </GetAssemblyIdentity>
-    <Delete Files="$(TargetDir)*.nupkg" />
-    <Exec Command="D:\NuGet.exe pack $(ProjectPath) -Properties Configuration=Release -Verbosity detailed"></Exec>
-    <Exec Command="D:\NuGet.exe push $(TargetDir)BLS.Infrastructure.%(CurrentAssembly.Version).nupkg 440bc87f-c8b3-4410-b57b-192c649bcadd -src https://www.nuget.org"></Exec>
-  </Target>-->
 </Project>
