--- a/BLS.Infrastructure/BLS.Infrastructure.csproj
+++ b/BLS.Infrastructure/BLS.Infrastructure.csproj
@@ -73,6 +73,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -82,6 +84,7 @@
   <ItemGroup>
     <Compile Include="Extentions\Enum\EnumExtention.cs" />
     <Compile Include="Extentions\ObjectExtentions.cs" />
+    <Compile Include="Interceptors\HandlerAttributes\CacheHandlerAttribute.cs" />
     <Compile Include="Properties\AssemblyFileVersion.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
