HFA: Add Models to infrastructure

--- a/BLS.Infrastructure/BLS.Infrastructure.csproj
+++ b/BLS.Infrastructure/BLS.Infrastructure.csproj
@@ -85,6 +85,8 @@
     <Compile Include="Extentions\Enum\EnumExtention.cs" />
     <Compile Include="Extentions\ObjectExtentions.cs" />
     <Compile Include="Interceptors\HandlerAttributes\CacheHandlerAttribute.cs" />
+    <Compile Include="Mvc\Model\BaseModel.cs" />
+    <Compile Include="Mvc\Model\IModel.cs" />
     <Compile Include="Properties\AssemblyFileVersion.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
